# Gogaman

./: CMakeLists.txt  Gogaman.sln
Dependencies/GLFW/lib/: glfw3.lib
Gogaman/: CMakeLists.txt  Gogaman.vcxproj  Gogaman.vcxproj.filters  WindowsWindow.cpp  WindowsWindow.h
Gogaman/shaders/: circularBlurVertical.fs  coc.fs  directPBR.fs  postprocess.fs  taa.fs  upsample.fs  voxelConeTracing2.fs  voxelInjectDirect.compute  voxelInjectIndirect.compute
Gogaman/src/: Core.h  Gogaman.h  Main.cpp  pch.h
Gogaman/src/Gogaman/: Application.cpp  Application.h  Config.h  Core.h  EntryPoint.h  Input.h  InputCodes.h  Main.cpp  ResourceManager.cpp  ResourceManager.h  Window.h
Gogaman/src/Gogaman/Events/: Event.h  EventDispatcher.h  EventListener.cpp  EventListener.h  EventQueue.cpp  EventQueue.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Gogaman/src/Gogaman/Logging/: Log.h  Logger.cpp  Logger.h
Gogaman/src/Gogaman/Scene/: SceneNode.cpp  SceneNode.h
Gogaman/src/Gogaman/graphics/: Framebuffer.cpp  Framebuffer.h  Framebuffers.cpp  Framebuffers.h  Mesh.h  Model.cpp  Model.h  Renderbuffer.cpp  Renderbuffer.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture1D.cpp  Texture1D.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  texture3D.cpp  texture3D.h
Gogaman/src/Platform/OpenGL/: Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Texture.h  Texture1D.cpp  Texture1D.h  Texture3D.cpp  VertexArrayBuffer.cpp  VertexArrayBuffer.h  VertexBuffer.h
Gogaman/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Gogaman/src/graphics/: Light.h  Model.h  texture3D.cpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Application.cpp
bin-int/Debug-x64/Gogaman/: application.new.obj.enc  model.new.obj.enc  resourcemanager.new.obj.enc  vc141.idb  vc142.idb
bin-int/Debug-x64/Gogaman/Gogaman.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gogaman.write.1u.tlog  link.10396.delete.1.tlog  (+40 more)
bin-int/Debug-x64/Sandbox/: vc141.idb  vc142.idb
(+34 files in other folders)
